# templateplugin_point_cloud_transport

./: CMakeLists.txt  README.md  package.xml  templateplugin_plugins.xml
cfg/: TemplatepluginPublisher.cfg  TemplatepluginSubscriber.cfg
include/templateplugin_point_cloud_transport/: templateplugin_common.h  templateplugin_publisher.h  templateplugin_subscriber.h
msg/: CustomMessage.msg
src/: manifest.cpp  templateplugin_publisher.cpp  templateplugin_subscriber.cpp
