<package>
  <name>templateplugin_point_cloud_transport</name>
  <version>0.1.0</version>
  <description>
    Template plugin for point_cloud_transport. This plugin does not implement transport functionality and serves solely as a tutorial for implementing custom plugins.
  </description>
  <maintainer email="paplhjak@fel.cvut.cz">Jakub Paplham</maintainer>
  <license> BSD </license>

  <url type="repository">https://github.com/paplhjak/templateplugin_point_cloud_transport</url>

  <author>Jakub Paplham</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>point_cloud_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>



  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>point_cloud_transport</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>
    <point_cloud_transport plugin="${prefix}/templateplugin_plugins.xml" />
  </export>
</package>
